feat: add multilingual support for 'mb' key in language files

--- a/lang/ka.json
+++ b/lang/ka.json
@@ -1,5 +1,6 @@
 {
     "desk": "iTamaSeT klaviaturaze arsebuli isris RilakebiT",
+    "mb": "iTamaSeT <span class='latin'>Ngage</span>-s '<span class='joystik'>🕹️</span>' RilakebiT",
     "welcome": "keTilia Seni mobrZaneba",
     "cv": "reziume",
     "projects": "proeqtebi",
